--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node -r esm runner",
+    "sync": "rsync -avz --exclude '**.ts' ./src/ ./lib/",
+    "start": "tsc && yarn sync && node -r esm runner",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^12.12.16",
     "esm": "^3.2.25",
     "typescript": "^3.7.3"
   }
