watch all tests

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "sync": "rsync -avz --exclude '**.ts' ./src/ ./lib/",
     "start": "tsc && yarn sync && node -r esm runner",
     "watch": "tsc --watch & nodemon -r esm runner",
-    "watch:test": "jest --passWithNoTests --watch",
+    "watch:test": "jest --passWithNoTests --watchAll",
     "test": "jest --passWithNoTests"
   },
   "keywords": [],
